--- a/setup.cfg
+++ b/setup.cfg
@@ -6,9 +6,9 @@ author_email = yralqfwus@mozmail.com
 description = Implementation of Replcraft in Python
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pypa/sampleproject
+url = https://github.com/techpixel/replcraft-jarci
 project_urls =
-    Bug Tracker = https://github.com/pypa/sampleproject/issues
+    Bug Tracker = https://github.com/techpixel/replcraft-jarci/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
