--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = replcraft-techpixel
+name = replcraft-jarci
 version = 1.5.0.0
 author = techpixel
 author_email = yralqfwus@mozmail.com
