--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,13 @@
-- name: pypi-publish
-  # You may pin to the exact commit or the version.
-  # uses: pypa/gh-action-pypi-publish@717ba43cfbb0387f6ce311b169a825772f54d295
-  uses: pypa/gh-action-pypi-publish@v1.5.0
-  with:
-    # Password for your PyPI user or an access token
-    password: ${{ secrets.PYPI_API_TOKEN }}
-    # The repository URL to use
-    repository_url: # optional
-    # The target directory for distribution
-    packages_dir: # optional, default is dist
-    # Check metadata before uploading
-    verify_metadata: # optional, default is true
-    # Do not fail if a Python package distribution exists in the target package index
-    skip_existing: # optional
-    # Show verbose output.
-    verbose: # optional
-    # Show hash values of files to be uploaded
-    print_hash: # optional
+name: learn-github-actions
+on: [push]
+jobs:
+  check-bats-version:
+    runs-on: ubuntu-latest
+    steps:
+      # You may pin to the exact commit or the version.
+      # uses: pypa/gh-action-pypi-publish@717ba43cfbb0387f6ce311b169a825772f54d295
+    - name: pypi-publish
+      uses: pypa/gh-action-pypi-publish@v1.5.0
+      with:
+        # Password for your PyPI user or an access token
+        password: ${{ secrets.PYPI_API_TOKEN }}
