--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ jobs:
   check-bats-version:
     runs-on: ubuntu-latest
     steps:
+    - run: python -m pip install --upgrade build
+    - run: python -m build
       # You may pin to the exact commit or the version.
       # uses: pypa/gh-action-pypi-publish@717ba43cfbb0387f6ce311b169a825772f54d295
     - name: pypi-publish
