--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,29 @@
 name: package-publish
 on: [push]
 jobs:
-  check-bats-version:
+  build-n-publish:
+    name: Automatically build and publish python package
     runs-on: ubuntu-latest
     steps:
-    - run: python -m pip install --upgrade build
-    - run: python -m build
+    - uses: actions/checkout@master
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
+    - name: Install pypa/build
+      run: >-
+        python -m
+        pip install
+        build
+        --user
+    - name: Build a binary wheel and a source tarball
+      run: >-
+        python -m
+        build
+        --sdist
+        --wheel
+        --outdir dist/
+        .
       # You may pin to the exact commit or the version.
       # uses: pypa/gh-action-pypi-publish@717ba43cfbb0387f6ce311b169a825772f54d295
     - name: pypi-publish
