--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,9 @@
 name: package-publish
 on: 
+  workflow_dispatch:
   push:
     branches:
-      - master
+      master
 jobs:
   build-n-publish:
     name: Automatically build and publish python package
